--- a/GoogleMapPolylineExample/Views/Home/Index.cshtml
+++ b/GoogleMapPolylineExample/Views/Home/Index.cshtml
@@ -7,26 +7,16 @@
 	<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<div id="map"></div>
+<div id="map" style="height:80vh;width:100%"></div>
 <!-- Replace the value of the key parameter with your own API key. -->
 
-<style>
-	#map {
-		height: 100%;
-	}
-	/* Optional: Makes the sample page fill the window. */
-	html, body {
-		height: 100%;
-		margin: 0;
-		padding: 0;
-	}
-</style>
 
-<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap">
+<script 
+		src="https://maps.googleapis.com/maps/api/js">
 </script>
 
 <script>
+	google.maps.event.addDomListener(window, 'load', initMap);
 	function initMap() {
 		var map = new google.maps.Map(document.getElementById('map'), {
 			zoom: 3,
@@ -34,7 +24,7 @@
 			mapTypeId: 'terrain'
 		});
 
-		var flightPlanCoordinates = @ViewData["arrayOfTrackPoints"]
+		var flightPlanCoordinates = JSON.parse('@Html.Raw(@ViewData["arrayOfTrackPoints"])');
 
 		//var flightPlanCoordinates = [
 		//	{ lat: 37.772, lng: -122.214 },
